Prevent long and lat from wrapping on window resize

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,11 +3,11 @@ body {
   clear:both;
 
   .paginated-list {
-    width: 65%;
+    width: 60%;
     min-width: 35em;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1.7em;
+    margin-top: 1.2em;
   }
 }
 
@@ -60,6 +60,7 @@ body {
         .lat-long {
           font-weight: 400;
           padding-bottom: 0.4em;
+          white-space: nowrap;
         }
       }
 
@@ -69,7 +70,7 @@ body {
         font-weight: 100;
         margin-right: 4em;
         float:left;
-        line-height: 3.8em;
+        line-height: 3.6em;
       }
 
       .impression-cost {
